--- a/rottenpotatoes/app/views/movies/similar.html.erb
+++ b/rottenpotatoes/app/views/movies/similar.html.erb
@@ -1,7 +1,5 @@
-<!--  This file is app/views/movies/index.html.erb -->
-<h2>All Movies</h2>
-
-<%#  Part 2: Start here... %>
+<!--  app/views/movies/show.html.erb -->
+<h2>Similar Movies for <em><%= @movie.title %></em></h2>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
@@ -35,4 +33,3 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Add new movie', new_movie_path, :class => 'btn btn-primary' %>
